--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.9.0",
+    "@eslint/js": "^9.36.0",
     "@storybook/addon-essentials": "^8.3.7",
     "@storybook/addon-interactions": "^8.3.7",
     "@storybook/addon-links": "^8.3.7",
@@ -50,7 +51,13 @@
     "@storybook/react": "^8.3.7",
     "@storybook/react-webpack5": "^8.3.7",
     "@storybook/test": "^8.3.7",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-storybook": "^9.0.7",
+    "globals": "^16.4.0",
+    "prettier": "^3.6.2",
     "prop-types": "^15.8.1",
     "storybook": "^8.3.7",
     "webpack": "^5.102.0"
